--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,17 @@
   justify-content: center;
 }
 
-@media screen and (max-width: 620px) {
+#aboutSection {
+  grid-column: 1/3;
+}
+
+@media screen and (max-width: 1120px) {
+  #aboutSection {
+    grid-column: 1/2;
+  }
+}
+
+@media screen and (max-width: 420px) {
   #wrapper {
     justify-content: stretch;
   }
