--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #wrapper {
   justify-content: center;
   grid-template-columns: repeat(2, 430px);
-  grid-template-rows: 750px 500px min-content min-content;
+  grid-template-rows: 750px 500px 65px min-content min-content;
 }
 
 #aboutWrapper {
@@ -34,6 +34,11 @@ html {
   grid-template-rows: 1fr 140px 1fr;
 }
 
+#ArticlesLabel1 {
+  grid-row: 3/4;
+  grid-column: 1/3;
+}
+
 @media screen and (max-width: 1061px) {
   #aboutSection {
     grid-column: 1/2;
@@ -41,14 +46,21 @@ html {
 
   #wrapper {
     grid-template-columns: repeat(auto-fit, minmax(100px, 430px));
-    grid-template-rows: 600px 600px 800px min-content min-content min-content;
+    grid-template-rows: 600px 600px 700px 60px min-content min-content min-content;
+  }
+  #ArticlesLabel1 {
+    grid-row: 4/5;
+    grid-column: 1/2;
+  }
+  #latestArticle {
+    grid-template-rows: 1fr 50px 1fr;
   }
 }
 
 @media screen and (max-width: 420px) {
   #wrapper {
     grid-template-columns: repeat(auto-fill, minmax(100px, 350px));
-    grid-template-rows: 330px 480px 800px min-content min-content min-content;
+    grid-template-rows: 330px 480px 800px 60px min-content min-content min-content;
   }
   #last {
     font-size: 80px;
