--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.text {
+  font-family: "Unna";
+  font-weight: 900;
+  margin-right: 50px;
+}
+
+.seperator {
+  background-color: black;
+  width: 250px;
+  height: 1px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
