--- a/src/styles/book.css
+++ b/src/styles/book.css
@@ -1,4 +1,4 @@
-#book-wrapper {
+#book-alert-wrapper {
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -7,7 +7,7 @@
   transition: all 0.5s;
 }
 
-#book-close {
+#book-alert-close {
   cursor: pointer;
   position: absolute;
   z-index: 11;
@@ -33,34 +33,28 @@
   transform: rotate(45deg);
 }
 
-#book-content {
+#book-alert-content {
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-#book-title-wrapper {
+#book-alert-title-wrapper {
   max-width: 600px;
 }
 
-#book-title {
+#book-alert-title {
   color: rgb(46, 46, 46);
   font-size: 120px;
   line-height: 1;
 }
 
-#book-image {
+#book-alert-image {
   width: 500px;
 }
 
-#book-author {
-  color: rgb(46, 46, 46);
-  font-size: 30px;
-  font-family: "Roboto";
-}
-
-#book-date {
+#book-alert-date {
   background-color: white;
   color: rgb(36, 36, 36);
   width: max-content;
